--- a/index.html
+++ b/index.html
@@ -56,6 +56,59 @@
       <a href="#footer"><span>풋터 바로가기</span></a>
     </div>
     <div class="wrap">
+      <!-- slide -->
+
+      <div class="slide-wrap slide-name">
+        <!-- video -->
+        <section>
+          <div class="video-main">
+            <video muted autoplay loop>
+              <source src="./videos/saint laurent main.mp4" type="video/mp4" />
+              <strong>Your browser does not support the video tag.</strong>
+            </video>
+          </div>
+        </section>
+        <!-- 로고 애니메이션 -->
+        <div class="logo-ani"></div>
+        <!-- main img -->
+        <div class="main-collec">
+          <img
+            class="main-img"
+            src="./images/comm/main-img-blur.png"
+            alt="saint laurent mens summer 2024"
+          />
+          <div class="sec-main">
+            <div class="sec-collec">
+              <div class="sec-collec-1">
+                <img
+                  src="./images/contents/collection/runway/1.png"
+                  alt="collection runway"
+                />
+              </div>
+              <div class="sec-collec-2">
+                <img
+                  src="./images/contents/collection/runway/2.png"
+                  alt="collection runway"
+                />
+              </div>
+              <div class="sec-collec-3">
+                <img
+                  src="./images/contents/collection/runway/3.png"
+                  alt="collection runway"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- main -->
+      <main id="main" class="container">컨텐츠</main>
+
+      <!-- footer -->
+      <footer id="footer" class="container">풋터</footer>
+
+      <!-- header -->
       <header id="header" class="container">
         <!-- inner -->
         <div class="inner">
@@ -73,7 +126,7 @@
           <!-- Logo -->
           <h1 id="logo">
             <a href="#">
-              <img src="./images/logo-white.png" alt="logo" />
+              <img src="./images/comm/logo-white.png" alt="logo" />
             </a>
           </h1>
           <!-- util-2 -->
@@ -89,32 +142,6 @@
         </div>
         <!-- <nav id="gnb">nav</nav> -->
       </header>
-
-      <!-- slide -->
-
-      <div class="slide-wrap slide-name">
-        <!-- video -->
-        <div class="video-main">
-          <video muted autoplay loop>
-            <source src="./videos/saint laurent main.mp4" type="video/mp4" />
-            <strong>Your browser does not support the video tag.</strong>
-          </video>
-        </div>
-        <!-- 로고 애니메이션 -->
-        <div class="logo-ani"></div>
-        <div class="main-img">
-          <img
-            src="./images/main-img-blur.png"
-            alt="saint laurent mens summer 2024"
-          />
-        </div>
-      </div>
-
-      <!-- main -->
-      <main id="main" class="container">컨텐츠</main>
-
-      <!-- footer -->
-      <footer id="footer" class="container">풋터</footer>
     </div>
   </body>
 </html>
