--- a/index.html
+++ b/index.html
@@ -63,18 +63,25 @@
         <section>
           <div class="video-main">
             <video muted autoplay loop>
-              <source src="./videos/saint laurent main.mp4" type="video/mp4" />
+              <source
+                src="./videos/saint laurent winter collection main.mp4"
+                type="video/mp4"
+              />
               <strong>Your browser does not support the video tag.</strong>
             </video>
           </div>
         </section>
         <!-- 로고 애니메이션 -->
-        <div class="logo-ani"></div>
+        <div class="logo-ani">
+          <div class="ocean">
+            <div class="wave"></div>
+          </div>
+        </div>
         <!-- main img -->
         <div class="main-collec">
           <img
             class="main-img"
-            src="./images/comm/main-img-blur.png"
+            src="./images/contents/collec-main-wide.png"
             alt="saint laurent mens summer 2024"
           />
           <div class="sec-main">
@@ -97,51 +104,89 @@
                   alt="collection runway"
                 />
               </div>
+              <div class="sec-collec-4">
+                <img
+                  src="./images/contents/collection/runway/4.png"
+                  alt="collection runway"
+                />
+              </div>
+              <div class="sec-collec-5">
+                <img
+                  src="./images/contents/collection/runway/5.png"
+                  alt="collection runway"
+                />
+              </div>
+              <div class="sec-collec-5">
+                <img
+                  src="./images/contents/collection/runway/6.png"
+                  alt="collection runway"
+                />
+              </div>
+            </div>
+            <div class="sec-img-slide">
+              <div class="sec-img-slide-1">
+                <img
+                  src="./images/contents/collection/runway/slide-1.png"
+                  alt="collecion runway slide"
+                />
+              </div>
+              <div class="sec-img-slide-2">
+                <img src="./images/contents/collection/runway/7.png" alt="" />
+              </div>
+              <div class="sec-img-slide-3"></div>
+              <div class="sec-img-slide-4"></div>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- main -->
-      <main id="main" class="container">컨텐츠</main>
-
-      <!-- footer -->
-      <footer id="footer" class="container">풋터</footer>
-
-      <!-- header -->
-      <header id="header" class="container">
-        <!-- inner -->
-        <div class="inner">
-          <!-- util-1 -->
-          <div class="util-1">
-            <ul class="lst-util">
-              <li>
-                <!-- a : 링크 연결 / button : 동작 처리  -->
-                <button class="btn-g btn-search">
-                  <span class="blind">검색</span>
-                </button>
-              </li>
-            </ul>
-          </div>
-          <!-- Logo -->
-          <h1 id="logo">
-            <a href="#">
-              <img src="./images/comm/logo-white.png" alt="logo" />
-            </a>
-          </h1>
-          <!-- util-2 -->
-          <div class="util-2">
-            <ul class="lst-util2">
-              <li>
-                <button class="btn-g btn-ham">
-                  <span class="blind">마이페이지</span>
-                </button>
-              </li>
-            </ul>
-          </div>
+      <!-- 로고 애니메이션 -->
+      <div class="logo-ani-2">
+        <div class="ocean">
+          <div class="wave"></div>
         </div>
-        <!-- <nav id="gnb">nav</nav> -->
-      </header>
+
+        <!-- main -->
+        <main id="main" class="container"></main>
+
+        <!-- footer -->
+        <footer id="footer" class="container">풋터</footer>
+
+        <!-- header -->
+        <header id="header" class="container">
+          <!-- inner -->
+          <div class="inner">
+            <!-- util-1 -->
+            <div class="util-1">
+              <ul class="lst-util">
+                <li>
+                  <!-- a : 링크 연결 / button : 동작 처리  -->
+                  <button class="btn-g btn-search">
+                    <span class="blind">검색</span>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <!-- Logo -->
+            <h1 id="logo">
+              <a href="#">
+                <img src="./images/comm/logo-white.png" alt="logo" />
+              </a>
+            </h1>
+            <!-- util-2 -->
+            <div class="util-2">
+              <ul class="lst-util2">
+                <li>
+                  <button class="btn-g btn-ham">
+                    <span class="blind">마이페이지</span>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- <nav id="gnb">nav</nav> -->
+        </header>
+      </div>
     </div>
   </body>
 </html>
