--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
             </video>
           </div>
         </section>
+
         <!-- 로고 애니메이션 -->
         <div class="logo-ani">
           <div class="ocean">
             <div class="wave"></div>
           </div>
         </div>
+
         <!-- main img -->
         <div class="main-collec">
           <img
@@ -123,20 +125,98 @@
                 />
               </div>
             </div>
-            <div class="sec-img-slide">
-              <div class="sec-img-slide-1">
+          </div>
+        </div>
+
+        <!-- 슬라이드 구역 -->
+        <div class="sec-slide-wrap">
+          <!-- Swiper -->
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <img
-                  src="./images/contents/collection/runway/slide-1.png"
-                  alt="collecion runway slide"
+                  src="./images/contents/collection/runway-slide/1.jpg"
+                  alt="slide-1"
                 />
               </div>
-              <div class="sec-img-slide-2">
-                <img src="./images/contents/collection/runway/7.png" alt="" />
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/2.jpg"
+                  alt="slide-2"
+                />
               </div>
-              <div class="sec-img-slide-3"></div>
-              <div class="sec-img-slide-4"></div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/3.jpg"
+                  alt="slide-3"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/4.jpg"
+                  alt="slide-4"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/5.jpg"
+                  alt="slide-5"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/6.jpg"
+                  alt="slide-6"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/7.jpg"
+                  alt="slide-7"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/8.jpg"
+                  alt="slide-8"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/9.jpg"
+                  alt="slide-9"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/10.jpg"
+                  alt="slide-10"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/contents/collection/runway-slide/11.jpg"
+                  alt="slide-11"
+                />
+              </div>
             </div>
+            <div class="swiper-scrollbar"></div>
           </div>
+
+          <!-- Swiper JS -->
+          <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+          <!-- Initialize Swiper -->
+          <script>
+            var swiper = new Swiper(".mySwiper", {
+              slidesPerView: 4,
+              spaceBetween: 4,
+              scrollbar: {
+                el: ".swiper-scrollbar",
+                hide: true,
+              },
+            });
+          </script>
         </div>
       </div>
 
@@ -147,10 +227,169 @@
         </div>
 
         <!-- main -->
-        <main id="main" class="container"></main>
+        <main id="main">
+          <section>
+            <div class="img-wrap">
+              <ul class="img-list">
+                <li>
+                  <a href="#">
+                    <div class="list-box">
+                      <img
+                        src="./images/main/main-sec/1.png"
+                        alt="main section image 1"
+                      />
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/2.png"
+                      alt="main section image 2"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/3.png"
+                      alt="main section image 3"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/4.png"
+                      alt="main section image 4"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/5.png"
+                      alt="main section image 5"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/6.png"
+                      alt="main section image 6"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/7.png"
+                      alt="main section image 7"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img
+                      src="./images/main/main-sec/8.png"
+                      alt="main section image 8"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </main>
 
         <!-- footer -->
-        <footer id="footer" class="container">풋터</footer>
+        <div class="ocean">
+          <div class="wave"></div>
+        </div>
+        <footer id="footer" class="container">
+          <div class="container">
+            <ul class="lst-foot">
+              <li>
+                <p class="fp">
+                  SHIPPING TO : REPUBLIC OF KOREA
+                  <span class="material-icons-outlined"> chevron_right </span>
+                </p>
+              </li>
+              <li>
+                <p class="footerbox">
+                  LANGUAGE : ENGLISH
+                  <span class="material-icons-outlined"> chevron_right </span>
+                </p>
+              </li>
+
+              <li>
+                <p class="footerbox">
+                  SOCIAL MEDIA
+                  <span class="material-icons-outlined"> chevron_right </span>
+                </p>
+                <ul class="lst-sns">
+                  <li class="iconbox">
+                    <a href="https://www.facebook.com/ysl/?locale=ko_KR">
+                      <img
+                        src="./images/main/footer/Facebook_1_.png"
+                        alt="SAINT LAURENT Facebook"
+                      />
+                    </a>
+                  </li>
+                  <li class="iconbox">
+                    <a href="https://www.instagram.com/ysl/">
+                      <img
+                        src="./images/main/footer/Instagram_1_.png"
+                        alt="SAINT LAURENT Instagram"
+                      />
+                    </a>
+                  </li>
+                  <li class="iconbox">
+                    <a href="https://www.youtube.com/@yvessaintlaurent">
+                      <img
+                        src="./images/main/footer/YouTube_1_.png"
+                        alt="SAINT LAURENT Youtube"
+                      />
+                    </a>
+                  </li>
+                  <li class="iconbox">
+                    <a href="https://www.ysl.com/ko-kr">
+                      <img
+                        src="./images/main/footer/Twitter_1_.png"
+                        alt="SAINT LAURENT Twitter"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <p class="footerbox">
+                  NEWSLETTER
+                  <span class="material-icons-outlined"> chevron_right </span>
+                </p>
+              </li>
+              <li>
+                <p class="footerbox">
+                  BY CONTACTING CUSTOMER SERVICE, YOU CONSENT TO THE TRANSFER OF
+                  YOUR PERSONAL INFORMATION ABROAD.
+                </p>
+              </li>
+              <li>
+                <p class="footerbox">
+                  YVES SAINT LAURENT KOREA LLC | BUSINESS REGISTRATION NO.
+                  211-88-87468 ADDRESS OF THE COMPANY : 13F, 517,
+                  YEONGDONG-DAERO, GANGNAM-GU, SEOUL, REPUBLIC OF KOREA | LEGAL
+                  NOTICE NAME OF REPRESENTATIVE AS RECORDED IN THE BUSINESS
+                  REGISTRATION CERTIFICATE : HIROFUMI TAMBO TELECOMMUNICATION
+                  REGISTRATION NUMBER : 2022-서울강남-06159 ORGANIZATION WHO
+                  ISSUED TELECOMMUNICAITON REGISTRATION NUMBER: SEOUL GANGNAM GU
+                  OFFICE HOSTING SERVICE : SALESFORCE <br />
+                  CUSTOMER CENTER : + 82 2-6105-2228
+                </p>
+              </li>
+            </ul>
+          </div>
+        </footer>
 
         <!-- header -->
         <header id="header" class="container">
