--- a/index.html
+++ b/index.html
@@ -225,207 +225,221 @@
         <div class="ocean">
           <div class="wave"></div>
         </div>
+      </div>
 
-        <!-- main -->
-        <main id="main">
-          <section>
-            <div class="img-wrap">
-              <ul class="img-list">
-                <li>
-                  <a href="#">
-                    <div class="list-box">
-                      <img
-                        src="./images/main/main-sec/1.png"
-                        alt="main section image 1"
-                      />
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/2.png"
-                      alt="main section image 2"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/3.png"
-                      alt="main section image 3"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/4.png"
-                      alt="main section image 4"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/5.png"
-                      alt="main section image 5"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/6.png"
-                      alt="main section image 6"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/7.png"
-                      alt="main section image 7"
-                    />
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <img
-                      src="./images/main/main-sec/8.png"
-                      alt="main section image 8"
-                    />
-                  </a>
-                </li>
-              </ul>
+      <!-- main -->
+      <main id="main">
+        <div class="nonelogo">
+          <!--YOUTUBE VIDEO-->
+          <section class="youtube">
+            <div class="youtube__area">
+              <div id="player"></div>
             </div>
+            <div class="youtube__cover"></div>
           </section>
-        </main>
-
-        <!-- footer -->
-        <div class="ocean">
-          <div class="wave"></div>
         </div>
-        <footer id="footer" class="container">
-          <div class="container">
-            <ul class="lst-foot">
+        <section>
+          <div class="img-main-full">
+            <img src="./images/main/main-sec/mainimg.jpg" alt="full image" />
+          </div>
+        </section>
+        <section class="img-sec">
+          <div class="img-wrap">
+            <ul class="img-list">
               <li>
-                <p class="fp">
-                  SHIPPING TO : REPUBLIC OF KOREA
-                  <span class="material-icons-outlined"> chevron_right </span>
-                </p>
+                <a href="#">
+                  <div class="list-box">
+                    <img
+                      src="./images/main/main-sec/1.png"
+                      alt="main section image 1"
+                    />
+                  </div>
+                </a>
               </li>
               <li>
-                <p class="footerbox">
-                  LANGUAGE : ENGLISH
-                  <span class="material-icons-outlined"> chevron_right </span>
-                </p>
-              </li>
-
-              <li>
-                <p class="footerbox">
-                  SOCIAL MEDIA
-                  <span class="material-icons-outlined"> chevron_right </span>
-                </p>
-                <ul class="lst-sns">
-                  <li class="iconbox">
-                    <a href="https://www.facebook.com/ysl/?locale=ko_KR">
-                      <img
-                        src="./images/main/footer/Facebook_1_.png"
-                        alt="SAINT LAURENT Facebook"
-                      />
-                    </a>
-                  </li>
-                  <li class="iconbox">
-                    <a href="https://www.instagram.com/ysl/">
-                      <img
-                        src="./images/main/footer/Instagram_1_.png"
-                        alt="SAINT LAURENT Instagram"
-                      />
-                    </a>
-                  </li>
-                  <li class="iconbox">
-                    <a href="https://www.youtube.com/@yvessaintlaurent">
-                      <img
-                        src="./images/main/footer/YouTube_1_.png"
-                        alt="SAINT LAURENT Youtube"
-                      />
-                    </a>
-                  </li>
-                  <li class="iconbox">
-                    <a href="https://www.ysl.com/ko-kr">
-                      <img
-                        src="./images/main/footer/Twitter_1_.png"
-                        alt="SAINT LAURENT Twitter"
-                      />
-                    </a>
-                  </li>
-                </ul>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/2.png"
+                    alt="main section image 2"
+                  />
+                </a>
               </li>
               <li>
-                <p class="footerbox">
-                  NEWSLETTER
-                  <span class="material-icons-outlined"> chevron_right </span>
-                </p>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/3.png"
+                    alt="main section image 3"
+                  />
+                </a>
               </li>
               <li>
-                <p class="footerbox">
-                  BY CONTACTING CUSTOMER SERVICE, YOU CONSENT TO THE TRANSFER OF
-                  YOUR PERSONAL INFORMATION ABROAD.
-                </p>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/4.png"
+                    alt="main section image 4"
+                  />
+                </a>
               </li>
               <li>
-                <p class="footerbox">
-                  YVES SAINT LAURENT KOREA LLC | BUSINESS REGISTRATION NO.
-                  211-88-87468 ADDRESS OF THE COMPANY : 13F, 517,
-                  YEONGDONG-DAERO, GANGNAM-GU, SEOUL, REPUBLIC OF KOREA | LEGAL
-                  NOTICE NAME OF REPRESENTATIVE AS RECORDED IN THE BUSINESS
-                  REGISTRATION CERTIFICATE : HIROFUMI TAMBO TELECOMMUNICATION
-                  REGISTRATION NUMBER : 2022-서울강남-06159 ORGANIZATION WHO
-                  ISSUED TELECOMMUNICAITON REGISTRATION NUMBER: SEOUL GANGNAM GU
-                  OFFICE HOSTING SERVICE : SALESFORCE <br />
-                  CUSTOMER CENTER : + 82 2-6105-2228
-                </p>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/5.png"
+                    alt="main section image 5"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/6.png"
+                    alt="main section image 6"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/7.png"
+                    alt="main section image 7"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/main/main-sec/8.png"
+                    alt="main section image 8"
+                  />
+                </a>
               </li>
             </ul>
           </div>
-        </footer>
+        </section>
+      </main>
 
-        <!-- header -->
-        <header id="header" class="container">
-          <!-- inner -->
-          <div class="inner">
-            <!-- util-1 -->
-            <div class="util-1">
-              <ul class="lst-util">
-                <li>
-                  <!-- a : 링크 연결 / button : 동작 처리  -->
-                  <button class="btn-g btn-search">
-                    <span class="blind">검색</span>
-                  </button>
-                </li>
-              </ul>
-            </div>
-            <!-- Logo -->
-            <h1 id="logo">
-              <a href="#">
-                <img src="./images/comm/logo-white.png" alt="logo" />
-              </a>
-            </h1>
-            <!-- util-2 -->
-            <div class="util-2">
-              <ul class="lst-util2">
-                <li>
-                  <button class="btn-g btn-ham">
-                    <span class="blind">마이페이지</span>
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <!-- <nav id="gnb">nav</nav> -->
-        </header>
+      <!-- footer -->
+      <div class="ocean">
+        <div class="wave"></div>
       </div>
+      <footer id="footer" class="container">
+        <div class="container">
+          <ul class="lst-foot">
+            <li>
+              <p class="fp">
+                SHIPPING TO : REPUBLIC OF KOREA
+                <span class="material-icons-outlined"> chevron_right </span>
+              </p>
+            </li>
+            <li>
+              <p class="footerbox">
+                LANGUAGE : ENGLISH
+                <span class="material-icons-outlined"> chevron_right </span>
+              </p>
+            </li>
+
+            <li>
+              <p class="footerbox">
+                SOCIAL MEDIA
+                <span class="material-icons-outlined"> chevron_right </span>
+              </p>
+              <ul class="lst-sns">
+                <li class="iconbox">
+                  <a href="https://www.facebook.com/ysl/?locale=ko_KR">
+                    <img
+                      src="./images/main/footer/Facebook_1_.png"
+                      alt="SAINT LAURENT Facebook"
+                    />
+                  </a>
+                </li>
+                <li class="iconbox">
+                  <a href="https://www.instagram.com/ysl/">
+                    <img
+                      src="./images/main/footer/Instagram_1_.png"
+                      alt="SAINT LAURENT Instagram"
+                    />
+                  </a>
+                </li>
+                <li class="iconbox">
+                  <a href="https://www.youtube.com/@yvessaintlaurent">
+                    <img
+                      src="./images/main/footer/YouTube_1_.png"
+                      alt="SAINT LAURENT Youtube"
+                    />
+                  </a>
+                </li>
+                <li class="iconbox">
+                  <a href="https://www.ysl.com/ko-kr">
+                    <img
+                      src="./images/main/footer/Twitter_1_.png"
+                      alt="SAINT LAURENT Twitter"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <p class="footerbox">
+                NEWSLETTER
+                <span class="material-icons-outlined"> chevron_right </span>
+              </p>
+            </li>
+            <li>
+              <p class="footerbox">
+                BY CONTACTING CUSTOMER SERVICE, YOU CONSENT TO THE TRANSFER OF
+                YOUR PERSONAL INFORMATION ABROAD.
+              </p>
+            </li>
+            <li>
+              <p class="footerbox">
+                YVES SAINT LAURENT KOREA LLC | BUSINESS REGISTRATION NO.
+                211-88-87468 ADDRESS OF THE COMPANY : 13F, 517, YEONGDONG-DAERO,
+                GANGNAM-GU, SEOUL, REPUBLIC OF KOREA | LEGAL NOTICE NAME OF
+                REPRESENTATIVE AS RECORDED IN THE BUSINESS REGISTRATION
+                CERTIFICATE : HIROFUMI TAMBO TELECOMMUNICATION REGISTRATION
+                NUMBER : 2022-서울강남-06159 ORGANIZATION WHO ISSUED
+                TELECOMMUNICAITON REGISTRATION NUMBER: SEOUL GANGNAM GU OFFICE
+                HOSTING SERVICE : SALESFORCE <br />
+                CUSTOMER CENTER : + 82 2-6105-2228
+              </p>
+            </li>
+          </ul>
+        </div>
+      </footer>
+
+      <!-- header -->
+      <header id="header" class="container">
+        <!-- inner -->
+        <div class="inner">
+          <!-- util-1 -->
+          <div class="util-1">
+            <ul class="lst-util">
+              <li>
+                <!-- a : 링크 연결 / button : 동작 처리  -->
+                <button class="btn-g btn-search">
+                  <span class="blind">검색</span>
+                </button>
+              </li>
+            </ul>
+          </div>
+          <!-- Logo -->
+          <h1 id="logo">
+            <a href="#">
+              <img src="./images/comm/logo-white.png" alt="logo" />
+            </a>
+          </h1>
+          <!-- util-2 -->
+          <div class="util-2">
+            <ul class="lst-util2">
+              <li>
+                <button class="btn-g btn-ham">
+                  <span class="blind">마이페이지</span>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- <nav id="gnb">nav</nav> -->
+      </header>
     </div>
   </body>
 </html>
