--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <meta name="twitter:domain" content="사이트 명" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -58,37 +62,96 @@
     <div class="wrap">
       <!-- header -->
       <header id="header" class="container">
-        <!-- inner -->
-        <div class="inner">
-          <!-- util-1 -->
-          <div class="util-1">
-            <ul class="lst-util">
-              <li>
-                <!-- a : 링크 연결 / button : 동작 처리  -->
-                <button class="btn-g btn-search">
-                  <span class="blind">검색</span>
-                </button>
-              </li>
-            </ul>
-          </div>
-          <!-- Logo -->
-          <h1 id="logo">
-            <a href="#">
-              <img src="./images/comm/logo-white.png" alt="logo" />
-            </a>
-          </h1>
-          <!-- util-2 -->
-          <div class="util-2">
-            <ul class="lst-util2">
-              <li>
-                <button class="btn-g btn-ham">
-                  <span class="blind">마이페이지</span>
-                </button>
-              </li>
-            </ul>
+        <div class="header-wrap">
+          <div class="inner">
+            <h1 id="logo">
+              <a href="#">
+                <img src="./images/comm/logo-white.png" alt="saintlaurent" />
+              </a>
+            </h1>
+            <nav class="gnb-wrap">
+              <!-- 링크 연결없이 스크립트 처리 -->
+              <!-- <a href="javascript:void(0)"
+                ><span class="material-icons"> menu </span></a
+              > -->
+              <input
+                type="checkbox"
+                name="gnbNav"
+                id="gnbNav"
+                class="input-burger"
+              />
+              <!-- checked 없는 것이 기본값이라 삭제 -->
+              <label for="gnbNav" class="label-burger">
+                <span class="blind">전체 메뉴 보기</span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+              </label>
+              <div id="gnb">
+                <div class="gnb-wrap">
+                  <div class="gnb-logo">
+                    <a href="#">
+                      <img
+                        src="./images/comm/logo-white.png"
+                        alt="saintlaurent"
+                      />
+                    </a>
+                  </div>
+                  <ul class="depth1">
+                    <li>
+                      <a href="#">여성의류</a>
+                      <ul class="depth2">
+                        <li>
+                          <a href="#">NEW - FALL 23</a>
+                        </li>
+                        <li>
+                          <a href="#">NEW - SUMMER 23</a>
+                        </li>
+                      </ul>
+                      <a href="#">남성의류</a>
+                      <ul class="depth2">
+                        <li>
+                          <a href="#">NEW - FALL WINTER23</a>
+                        </li>
+                        <li>
+                          <a href="#">NEW - SPRING SUMMER 23</a>
+                        </li>
+                      </ul>
+                      <a label-burgerhref="#">about us </a>
+                      <ul class="depth2">
+                        <li>
+                          <a href="#">NEW - FALL WINTER23</a>
+                        </li>
+                        <li>
+                          <a href="#">NEW - SPRING SUMMER 23</a>
+                        </li>
+                      </ul>
+                      <a href="#">about us </a>
+                      <ul class="depth2">
+                        <li>
+                          <a href="#">NEW - FALL WINTER23</a>
+                        </li>
+                        <li>
+                          <a href="#">NEW - SPRING SUMMER 23</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+            <div class="util">
+              <ul class="lst-util">
+                <li>
+                  <a href="#" class="btn-g btn-mypage">
+                    <span class="material-symbols-outlined"> person </span></a
+                  >
+                  <!-- <span class="blind">마이페이지</span> -->
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <!-- <nav id="gnb">nav</nav> -->
       </header>
 
       <!-- slide -->
