--- a/collection.html
+++ b/collection.html
@@ -61,7 +61,7 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
       <a href="#footer"><span>풋터 바로가기</span></a>
     </div>
-    <div class="wrap">
+    <div class="wrap wrap-collection">
       <!-- header -->
       <header data-include-path="./outline/header-b.html"></header>
 
@@ -91,7 +91,7 @@
         <div class="collection-main-collec">
           <img
             class="collection-main-img"
-            src="./images/contents/collec-main-wide.png"
+            src="./images/contents/collection/collec-main-wide.png"
             alt="saint laurent mens summer 2024"
           />
           <div class="collection-sec-main">
